<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb9b5b5"
    android:focusableInTouchMode="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">
    <TextView
        android:id="@+id/txtDate"
        android:textSize="20sp"
        android:text=""
        android:layout_marginBottom="15dp"
        android:textColor="#ff742db0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"/>
    <TextView
        android:id="@+id/txtTemperture"
        android:textSize="20sp"
        android:text=""
        android:textColor="#ff742db0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/txtDate" />
    <TableLayout
        android:layout_below="@id/txtDate"
        android:id="@+id/tableLayout"
        android:layout_width="820dp"
        android:layout_height="35dp">
        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:text="@string/order_id"
                android:textSize="20dp" />
            <TextView
                android:layout_width="100dp"
                android:text="@string/order_time_to_pick_up"
                android:textSize="20dp" />
            <TextView
                android:layout_width="130dp"
                android:text="@string/enter_time"
                android:textSize="20dp" />
            <TextView
                android:layout_width="120dp"
                android:text="@string/business"
                android:textSize="20dp" />
            <TextView
                android:layout_width="200dp"
                android:text="@string/address"
                android:textSize="20dp" />
            <TextView
                android:layout_width="170dp"
                android:text="@string/messenger"
                android:textSize="20dp" />
        </TableRow>
    </TableLayout>
    <ListView
        android:id="@+id/lstOrders"
        android:layout_below="@+id/tableLayout"
        android:layout_width="820dp"
        android:layout_height="450dp"></ListView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Workers In Shift"
        android:textSize="25dp"
        android:textIsSelectable="false"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/lstActiveWorkers" />
    <ListView
        android:id="@+id/lstActiveWorkers"
        android:layout_width="200dp"
        android:layout_height="400dp"
        android:layout_below="@+id/txtDate"
        android:layout_alignEnd="@+id/btnWorkersList">

    </ListView>

    <Button
        android:id="@+id/btnWorkersList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:background="#ff959694"
        android:drawableTop="@drawable/workers"
        android:onClick="btnWorkersList"
        android:text="@string/worker_list"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnManageRestaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:drawableTop="@drawable/restaurant"
        android:background="#ff959694"
        android:enabled="true"
        android:text="@string/manage_restaurants"
        android:onClick="btnManageRestaurants"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/btnWorkersList" />

    <Button
        android:id="@+id/btnCreateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/new_order"
        android:background="#ff959694"
        android:enabled="true"
        android:text="@string/create_order"
        android:onClick="btnCreateOrder"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
