<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <Button
        android:id="@+id/btnDeleteRestaurant"
        android:text="@string/delete_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="#ff000000" />
    <Button
        android:id="@+id/btnInfo"
        android:text="@string/show_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="#ff000000"/>
    <Button
        android:id="@+id/btnShowOrders"
        android:text="@string/show_workers_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle"
        android:textColor="#ff000000"/>
</LinearLayout>